--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Interactive periodic table and open source">
 		<title>Periodic Table</title>
 		<link rel="icon" href="Media/Na.png" type="image/png">
 		<link rel="stylesheet" href="CSS/Stylesheet.css" type="text/css">
