--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		<div class="header">
 			<h2 style="font-size: clamp(12px, 2vw, 25px)">O Περιοδικός πίνακας των χημικών στοιχείων</h2>
 			<div class="vertical-line"></div>
-			<button disabled>Graphs</button>
+			<a href="https://github.com/stefalgo" target="_blank">
+				<img alt="Static Badge" src="https://img.shields.io/badge/Github-Profile-181717?style=flat&logo=github">
+			</a>
 			<button onclick="toggleColorScheme()">Color Scheme</button>
 		</div>
 
