--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<option value="electronAffinity">Ηλεκτροσυγγένεια (kJ/mol)</option>
 			<option value="ionization">Ιονισμός (kJ/mol)</option>
 			<option value="radius">Ακτίνα (pm)</option>
+			<option value="discoveryDate">Ανακαλύφθηκε</option>
 			
 			<optgroup label="Αφθονία">
 				<option value="abundance-universe">Σύμπαν</option>
