Testing some <meta> card stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<title>Periodic Table</title>
 		<link rel="icon" href="Media/Na.png" type="image/png">
 		<link rel="stylesheet" href="CSS/Stylesheet.css" type="text/css">
+
+		<meta property="og:title" content="Periodic Table">
+		<meta property="og:description" content="Interactive periodic table and open source">
+		<meta property="og:image" content="https://stefalgo.github.io/My-Periodic-Table/Media/Na.png">
+		<meta property="og:url" content="https://stefalgo.github.io/My-Periodic-Table/">
+		<meta property="og:type" content="website">
 	</head>
 	<body>
 		<!--<h1>The Periodic Table Of Elements</h1>-->
