updated script tag on index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<meta property="og:image" content="https://stefalgo.github.io/My-Periodic-Table/Media/Na.png">
 		<meta property="og:url" content="https://stefalgo.github.io/My-Periodic-Table/">
 		<meta property="og:type" content="website">
+
+		<script type="module" src="js/index.js" defer></script>
 	</head>
 	<body>
 		<!--<h1>The Periodic Table Of Elements</h1>-->
@@ -346,7 +348,5 @@
 				</tr>
 			</table>
 		</div>
-		<script src="js/Events.js" type="module"></script>
-		<script type="module" src="js/index.js"></script>
 	</body>
 </html>
