some css update stuff

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Interactive periodic table and open source">
 		<title>Periodic Table</title>
 		<link rel="icon" href="Media/Na.png" type="image/png">
+		<link rel="stylesheet" href="CSS/Colors.css" type="text/css">
 		<link rel="stylesheet" href="CSS/Stylesheet.css" type="text/css">
 
 		<meta property="og:title" content="Periodic Table">
