added a warning if client has javascripts disabled

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 		<script type="module" src="js/index.js" defer></script>
 	</head>
 	<body>
+		<noscript>
+			<div style="color: white; background-color: red; padding: 10px; border-radius: 5px;">
+				⚠️ Warning: JavaScript is disabled in your browser. Some features may not work properly.
+			</div>
+		</noscript>
 		<!--<h1>The Periodic Table Of Elements</h1>-->
 		<div class="header">
 			<h2 style="font-size: clamp(12px, 2vw, 25px)">O Περιοδικός πίνακας των χημικών στοιχείων</h2>
