simple error when javascript is disabled

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 			<div style="color: white; background-color: red; padding: 10px; border-radius: 5px;">
 				⚠️ Warning: JavaScript is disabled in your browser. Some features may not work properly.
 			</div>
+			<style>
+				#PeriodicTablePanel, #atom {
+					display: none !important;
+				}
+				
+			</style>
 		</noscript>
 		<!--<h1>The Periodic Table Of Elements</h1>-->
 		<div class="header">
@@ -105,7 +111,7 @@
 			</div>
 		</div>
 
-		<div id="periodicTable">
+		<div id="periodicTable" class="category">
 			<table id="elements">
 				<tr class="groups">
 					<td class="period">-</td>
