--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
 
 				<option value="atomicMass">Ατομική Μάζα (u)</option>
 				<option value="energyLevels">Ηλεκτρονική δομή</option>
-				<option value="meltPoint">Σημείο τήξης (K)</option>		
+				<option value="configuration">Ηλεκτρονική διαμόρφωση</option>
+				<option value="meltPoint">Σημείο τήξης (K)</option>
 				<option value="boilPoint">Σημείο ζέσεως (K)</option>
 				<option value="density">Πυκνότητα (kJ/m3)</option>
 				<option value="electronegativity">Ηλεκτραρνητικότητα</option>		
 				<option value="electronAffinity">Ηλεκτροσυγγένεια (kJ/mol)</option>
 				<option value="ionization">Ιονισμός (kJ/mol)</option>
+				<option value="valence">Σθενότητα</option>
 				<option value="radius">Ακτίνα (pm)</option>
+
 				<option value="discoveryDate">Ανακαλύφθηκε</option>
 				
 				<optgroup label="Αφθονία">
