--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<a href="https://github.com/stefalgo" target="_blank">
 				<img alt="Static Badge" src="https://img.shields.io/badge/Github-Profile-181717?style=flat&logo=github">
 			</a>
+			<button onclick='sharePage()'>Share</button>
 			<button onclick="toggleColorScheme()">Color Scheme</button>
 		</div>
 
