--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="infoContainer" style="overflow: auto;">
 				<span class="close-btn">X</span>
 				<div id="CloseUp2"></div>
-				<div>
+				<div style="display: flex; justify-content: space-between;">
 					<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
 					<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
 				</div>
