--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
 				</div>
 				<hr>
-				<span class="popup-data"></span>
+				<div class="popup-data"></div>
 			</div>
 		</div>
 
@@ -171,14 +171,14 @@
 
 								<div style="width: 100%; overflow: auto; display: flex; flex-direction: column;">
 									<div>
-										<input id="tempNumInputK" type="number" min="0" max="7000" step="1" value="273">
+										<input id="tempNumInputK" type="number" min="0" max="7000" step="1" value="273" tabindex="-1">
 										<label for="tempNumInputK">K</label>
 									</div>
 									<div>
-										<input id="tempNumInputC" type="number" min="-273" max="6727" step="1" value="0">
+										<input id="tempNumInputC" type="number" min="-273" max="6727" step="1" value="0" tabindex="-1">
 										<label for="tempNumInputC">°C</label>
 									</div>
-									<input id="temp" type="range" min="0" max="7000" step="1" value="273">
+									<input id="temp" type="range" min="0" max="7000" step="1" value="273" tabindex="-1">
 								</div>
 							</div>
 							<div class="elementsClassView" id="propertyKey">
