some code cleanup

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<lable for="visualizeOption">Επιλογή οπτικοποίησης:</lable>
 				<select id="visualizeOption">
 					<option value="category">Κατηγορία</option>
-					<option value="blocks">Μπλοκ ηλεκτρονιακής διάταξης</option>
+					<option value="blocks">Τομέας</option>
 					<option value="state">Κατάσταση</option>
 
 					<option value="atomicMass">Ατομική Μάζα (u)</option>
@@ -74,7 +74,7 @@
 					<option value="configuration">Ηλεκτρονική διαμόρφωση</option>
 					<option value="meltPoint">Σημείο τήξης (K)</option>
 					<option value="boilPoint">Σημείο ζέσεως (K)</option>
-					<option value="density">Πυκνότητα (kJ/m3)</option>
+					<option value="density">Πυκνότητα (kg/m3)</option>
 					<option value="electronegativity">Ηλεκτραρνητικότητα</option>		
 					<option value="electronAffinity">Ηλεκτροσυγγένεια (kJ/mol)</option>
 					<option value="ionization">Ιονισμός (kJ/mol)</option>
