--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 								<label for="Linear">Γραμμικός</label>
 
 								<input id="logarithmic" type="radio" name="scale" value="log">
-								<label for="logarithmic">Λογαριθμική</label>
+								<label for="logarithmic">Λογαριθμικός</label>
 
 								<div style="display: flex; flex-direction: column; align-items: center;">
 									<b id="rangeGradient-minLabel">Ελάχ.</b>
