updated visualize function

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 				#PeriodicTablePanel, #atom {
 					display: none !important;
 				}
-				
 			</style>
 		</noscript>
 		<!--<h1>The Periodic Table Of Elements</h1>-->
@@ -42,11 +41,13 @@
 
 		<div id="infoPopup" class="popup">
 			<div class="infoContainer" style="overflow: auto;">
-				<span class="close-btn">X</span>
-				<div id="CloseUp2"></div>
-				<div style="display: flex; justify-content: space-between;">
-					<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
-					<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
+				<div>
+					<span class="close-btn">X</span>
+					<div id="CloseUp2"></div>
+					<div style="display: flex; justify-content: space-between;">
+						<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
+						<a class="popup-wikipediaLink" target="_blank">Ανοιγμα στη Βικιπαίδεια</a>
+					</div>
 				</div>
 				<hr>
 				<div class="popup-data"></div>
