Added heat capacity and thermal conductivity

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 						<option value="electronAffinity">Ηλεκτροσυγγένεια (kJ/mol)</option>
 						<option value="ionization">Ιονισμός (kJ/mol)</option>
 						<option value="valence">Σθενότητα</option>
+						<option value="heat">Θερμότητα (J/kgK)</option>
+						<option value="thermalConductivity">Θερμική Αγωγιμότητα (W/mK)</option>
+						
 						<option value="oxidationStates">Κατάσταση οξείδωσης</option>
 						<option value="radius">Ακτίνα (pm)</option>
 						<option value="discoveryDate">Ανακαλύφθηκε</option>
