Added Spectral analysis as its own view mode for some reason

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 						<option value="heat">Θερμότητα (J/kgK)</option>
 						<option value="thermalConductivity">Θερμική Αγωγιμότητα (W/mK)</option>
 						
+						<option value="SpectralAnalysis">Φασματική εκπομπή</option>
+
 						<option value="oxidationStates">Κατάσταση οξείδωσης</option>
 						<option value="radius">Ακτίνα (pm)</option>
 						<option value="discoveryDate">Ανακαλύφθηκε</option>
