--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<div id="sitePopup" class="popup widePopup">
 			<div class="infoContainer">
 				<span class="close-btn">X</span>
+				<input id="sitePopupSearchBar" type="text" disabled style="width: 80%;">
 				<iframe></iframe>
 			</div>
 		</div>
