--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 		<div class="header">
 			<h2 style="font-size: clamp(12px, 2vw, 25px)">O Περιοδικός πίνακας των χημικών στοιχείων</h2>
 			<div class="vertical-line"></div>
-			<a href="https://github.com/stefalgo" target="_blank">
-				<img alt="Static Badge" src="https://img.shields.io/badge/Github-Profile-181717?style=flat&logo=github">
+			<a href="https://github.com/stefalgo" target="_blank" class="githubProfile">
+				<img src="https://github.com/stefalgo.png">
+				Github Profile
 			</a>
-			<button onclick='sharePage()'>Share</button>
+			<button onclick='sharePage()'>Share Page</button>
 			<button onclick="toggleColorScheme()">Color Scheme</button>
 		</div>
 
