--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 						<option value="oxidationStates">Κατάσταση οξείδωσης</option>
 						<option value="radius">Ακτίνα (pm)</option>
+						<option value="atomicVolume">Ατομικός όγκος (cm3/mol)</option>
 						
 						<option value="SpectralAnalysis">Φασματική εκπομπή</option>
 						<option value="radioactiveEl">Ραδιενεργά στοιχεία</option>
