--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 			</div>
 		</div>
 
+		<div class="popup"><!--minigame thingy popup idk (WIP)-->
+			<div class="infoContainer" style="overflow: auto;">
+				<div>
+					<span class="close-btn">X</span>
+				</div>
+			</div>
+		</div>
+
 		<article id="PeriodicTablePanel">
 			<div style="display: flex; flex-direction: column; align-items: center;">
 				<input type="text" id="searchbar" placeholder="Αναζήτηση στοιχείο...">
@@ -156,8 +164,8 @@
 					<td class="period">1</td>
 					<td><div class="element nonmetal s" data-atomic="1"> <b>1</b> <abbr>H</abbr> <em>Υδρογόνο</em> <data>1.008</data> </div></td>
 					<td colspan="2"></td>
-					<td colspan="4" rowspan="3">
-						<div style="width: 100%; height: 100%; overflow: hidden; contain: size;">
+					<td colspan="4" rowspan="3" style="position: relative;">
+						<div style="width: 100%; height: 100%; overflow: hidden; contain: size; inset: 0; position: absolute;">
 							<div class="elementsClassView highlightElementClasses">
 								<div class="alkali highlightElement hoverEffect"><span>Αλκαλι</span></div>
 								<div class="alkaline highlightElement hoverEffect"><span>Αλκαλικές</span></div>
