--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<td><div class="element nonmetal s" data-atomic="1"> <b>1</b> <abbr>H</abbr> <em>Υδρογόνο</em> <data>1.008</data> </div></td>
 					<td colspan="2"></td>
 					<td colspan="4" rowspan="3" style="position: relative;">
-						<div style="width: 100%; height: 100%; overflow: hidden; contain: size; inset: 0; position: absolute;">
+						<div style="width: 100%; height: 100%; overflow: hidden; contain: size; inset: 0; position: absolute; padding: 2px;">
 							<div class="elementsClassView highlightElementClasses">
 								<div class="alkali highlightElement hoverEffect"><span>Αλκαλι</span></div>
 								<div class="alkaline highlightElement hoverEffect"><span>Αλκαλικές</span></div>
@@ -302,10 +302,14 @@
 					<td><div class="element alkali s" data-atomic="55"> <b>55</b> <abbr>Cs</abbr> <em>Καίσιο</em> <data>132.91</data> </div></td>
 					<td><div class="element alkaline s" data-atomic="56"> <b>56</b> <abbr>Ba</abbr> <em>Βάριο</em> <data>137.33</data> </div></td>
 					
-					<td rowspan="5"><div class="lanth-Act f">
-						<b>57 - 71</b>
-						<div style="height: 50px;"></div>
-						<b>89-103</b>
+					<td rowspan="5" style="position: relative;">
+						<div style="position: absolute; inset: 0; padding: 2px;">
+							<div class="lanth-Act f">
+								<b>57 - 71</b>
+								<div style="height: 50px;"></div>
+								<b>89-103</b>
+							</div>
+						</div>
 					</td>
 					<td><div class="element transition d" data-atomic="72"> <b>72</b> <abbr>Hf</abbr> <em>Άφνιο</em> <data>178.49</data> </div></td>
 					<td><div class="element transition d" data-atomic="73"> <b>73</b> <abbr>Ta</abbr> <em>Ταντάλιο</em> <data>180.95</data> </div></td>
