--- a/index.html
+++ b/index.html
@@ -1,92 +1,84 @@
 <!DOCTYPE html>
 <html class="darkMode" lang="el">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Interactive periodic table and open source">
-		<title>Periodic Table</title>
-		<link rel="icon" href="Media/Na.png" type="image/png">
-		<link rel="stylesheet" href="CSS/Colors.css" type="text/css">
-		<link rel="stylesheet" href="CSS/Stylesheet.css" type="text/css">
 
-		<meta property="og:title" content="Periodic Table">
-		<meta property="og:description" content="Interactive periodic table and open source">
-		<meta property="og:image" content="https://stefalgo.github.io/My-Periodic-Table/Media/Na.png">
-		<meta property="og:url" content="https://stefalgo.github.io/My-Periodic-Table/">
-		<meta property="og:type" content="website">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Interactive periodic table and open source">
+	<title>Periodic Table</title>
+	<link rel="icon" href="Media/Na.png" type="image/png">
+	<link rel="stylesheet" href="CSS/Colors.css" type="text/css">
+	<link rel="stylesheet" href="CSS/Stylesheet.css" type="text/css">
 
-		<script type="module" src="js/index.js" defer></script>
-	</head>
-	<body>
-		<noscript>
-			<div style="color: white; background-color: var(--danger); padding: 10px; border-radius: 5px;">
-				⚠️ Warning: JavaScript is disabled in your browser. Some features may not work properly.
-			</div>
-			<style>
-				#PeriodicTablePanel, #atom {
-					display: none !important;
-				}
-			</style>
-		</noscript>
-		<!--<h1>The Periodic Table Of Elements</h1>-->
-		<div class="header">
-			<h2 style="font-size: clamp(12px, 2vw, 25px)">O Περιοδικός πίνακας των χημικών στοιχείων</h2>
-			<div class="vertical-line"></div>
-			<a href="https://github.com/stefalgo" target="_blank" rel="noopener noreferrer" class="githubProfile">
-				<img src="https://github.com/stefalgo.png" alt="stefalgo GitHub profile">
-				Github Profile
-			</a>
-			<a href="https://github.com/stefalgo/My-Periodic-Table" target="_blank" rel="noopener noreferrer" class="githubProfile">
-				<img src="Media/GitHub_Invertocat_White.png" alt="Project GitHub" style="background: black;">
-				Project Page
-			</a>
-			<button type="button" onclick='sharePage()'>Share Page</button>
-			<button type="button" onclick="toggleColorScheme()">Color Scheme</button>
+	<meta property="og:title" content="Periodic Table">
+	<meta property="og:description" content="Interactive periodic table and open source">
+	<meta property="og:image" content="https://stefalgo.github.io/My-Periodic-Table/Media/Na.png">
+	<meta property="og:url" content="https://stefalgo.github.io/My-Periodic-Table/">
+	<meta property="og:type" content="website">
+
+	<script type="module" src="js/index.js" defer></script>
+</head>
+<body>
+	<noscript>
+		<div style="color: white; background-color: var(--danger); padding: 10px; border-radius: 5px;">
+			⚠️ Warning: JavaScript is disabled in your browser. Some features may not work properly.
 		</div>
-
-		<div id="infoPopup" class="popup">
-			<div class="infoContainer" style="overflow: auto;">
-				<div>
-					<button class="close-btn" type="button" aria-label="Close">X</button>
-					
-					<div id="CloseUp2">
-						<output>
-							<b class="closeUp-atomic">X</b> 
-							<abbr class="closeUp-shortName">A</abbr> 
-							<em class="closeUp-name">A</em> 
-							<data class="closeUp-mass">X</data>
-						</output>
-						<small style="font-size: .8em; text-align: end; display: flex; flex-direction: column; line-height: 11px;">
-							<span>X</span>
-						</small>
-					</div>
-
-					<div style="display: flex; justify-content: space-between;">
-						<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
-						<a class="popup-wikipediaLink" target="_blank" rel="noopener noreferrer">Ανοιγμα στη Βικιπαίδεια</a>
-					</div>
-				</div>
-				<hr>
-				<div class="popup-data"></div>
-			</div>
-		</div>
-
-		<div id="sitePopup" class="popup widePopup">
-			<div class="infoContainer">
+		<style>
+			#PeriodicTablePanel, #atom {
+				display: none !important;
+			}
+		</style>
+	</noscript>
+	<!--<h1>The Periodic Table Of Elements</h1>-->
+	<header class="header">
+		<h2 style="font-size: clamp(12px, 2vw, 25px)">O Περιοδικός πίνακας των χημικών στοιχείων</h2>
+		<div class="vertical-line"></div>
+		<button type="button" onclick='sharePage()'>Share Page</button>
+		<button type="button" onclick="toggleColorScheme()">Color Scheme</button>
+	</header>
+	<div id="infoPopup" class="popup">
+		<div class="infoContainer" style="overflow: auto;">
+			<div>
 				<button class="close-btn" type="button" aria-label="Close">X</button>
-				<input id="sitePopupSearchBar" type="text" disabled style="width: 80%;">
-				<iframe title="External site preview"></iframe>
-			</div>
-		</div>
+				
+				<div id="CloseUp2">
+					<output>
+						<b class="closeUp-atomic">X</b> 
+						<abbr class="closeUp-shortName">A</abbr> 
+						<em class="closeUp-name">A</em> 
+						<data class="closeUp-mass">X</data>
+					</output>
+					<small style="font-size: .8em; text-align: end; display: flex; flex-direction: column; line-height: 11px;">
+						<span>X</span>
+					</small>
+				</div>
 
-		<div class="popup"><!--minigame thingy popup idk (WIP)-->
-			<div class="infoContainer" style="overflow: auto;">
-				<div>
-					<button class="close-btn" type="button" aria-label="Close">X</button>
+				<div style="display: flex; justify-content: space-between;">
+					<a class="popup-pdfDownload">Λήψη αρχείου PDF</a>
+					<a class="popup-wikipediaLink" target="_blank" rel="noopener noreferrer">Ανοιγμα στη Βικιπαίδεια</a>
 				</div>
 			</div>
+			<hr>
+			<div class="popup-data"></div>
 		</div>
+	</div>
 
+	<div id="sitePopup" class="popup widePopup">
+		<div class="infoContainer">
+			<button class="close-btn" type="button" aria-label="Close">X</button>
+			<input id="sitePopupSearchBar" type="text" disabled style="width: 80%;">
+			<iframe title="External site preview"></iframe>
+		</div>
+	</div>
+
+	<div class="popup"><!--minigame thingy popup idk (WIP)-->
+		<div class="infoContainer" style="overflow: auto;">
+			<div>
+				<button class="close-btn" type="button" aria-label="Close">X</button>
+			</div>
+		</div>
+	</div>
+	<main>
 		<article id="PeriodicTablePanel">
 			<div style="display: flex; flex-direction: column; align-items: center;">
 				<input type="text" id="searchbar" placeholder="Αναζήτηση στοιχείο...">
@@ -409,5 +401,21 @@
 				</tr>
 			</table>
 		</div>
-	</body>
+	</main>
+	<br>
+	<footer class="footer">
+		<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener noreferrer">
+			<img src="docs/images/by_nc_nd_4_0.png" alt="license by-nc-nd-4.0 image">
+		</a>
+		<a href="https://github.com/stefalgo" target="_blank" rel="noopener noreferrer" class="githubProfile">
+			<img src="https://github.com/stefalgo.png" alt="stefalgo GitHub profile">
+			Github Profile
+		</a>
+		<a href="https://github.com/stefalgo/My-Periodic-Table" target="_blank" rel="noopener noreferrer" class="githubProfile">
+			<img src="Media/GitHub_Invertocat_White.png" alt="Project GitHub" style="background: black;">
+			Project Page
+		</a>
+	</footer>
+</body>
+
 </html>
